demo_output_stoch_v2.txt
warning: No `requires-python` value found in the workspace. Defaulting to `>=3.12`.
Traceback (most recent call last):
  File "/home/mhough/src/dmipy/dmipy_jax/examples/demo_stochastic_fitting.py", line 7, in <module>
    from dmipy_jax.core.modeling_framework import JaxMultiCompartmentModel
  File "/home/mhough/src/dmipy/dmipy_jax/__init__.py", line 24, in <module>
    from dmipy_jax import inverse
  File "/home/mhough/src/dmipy/dmipy_jax/inverse/__init__.py", line 1, in <module>
    from .solvers import MicrostructureOperator, GlobalOptimizer
  File "/home/mhough/src/dmipy/dmipy_jax/inverse/solvers.py", line 9, in <module>
    from dmipy_jax.core.modeling_framework import JaxMultiCompartmentModel
  File "/home/mhough/src/dmipy/dmipy_jax/core/__init__.py", line 1, in <module>
    from .modeling_framework import JaxMultiCompartmentModel
  File "/home/mhough/src/dmipy/dmipy_jax/core/modeling_framework.py", line 346
    else:
    ^^^^
IndentationError: expected an indented block after 'else' statement on line 345
